--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -3,6 +3,7 @@
 @import "./variables";
 @import "./game.scss";
 @import "./home.scss";
+@import "./pile.scss";
 
 $ligretto-theme: (
   // Typeography
